invest and news pages done

--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Overwaarde verzilveren | Thuisborg</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Thuisborg" />
+    <meta property="og:url" content="Thuisborg" />
+    <meta property="og:title" content="Thuisborg" />
+    <meta property="og:description" content="Thuisborg" />
+    <meta property="og:image" content="Thuisborg" />
+    <meta name="apple-mobile-web-app-title" content="Thuisborg" />
+    <meta name="application-name" content="Thuisborg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/template/fav/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/template/fav/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/template/fav/favicon-16x16.png" />
+    <link rel="manifest" href="/template/fav/site.webmanifest" />
+    <link rel="mask-icon" href="/template/fav/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
     <div id="app">
@@ -444,72 +458,72 @@
         </section>
       </main>
       <footer class="footer">
-          <div class="footer-cont">
-            <div class="col logo-address">
-              <a><img src="/template/images/logo.png" /></a>
-              <p>
-                Thuisborg Finance BV<br />
-                2021 © Thuisborg<br />
-                Mr. G. Groen van Prinstererlaan 88 A<br />
-                1181 TR Amstelveen<br />
-                <a href="call:0854015737">085 401 57 37</a>
-              </p>
+        <div class="footer-cont">
+          <div class="col logo-address">
+            <a><img src="/template/images/logo.png" /></a>
+            <p>
+              Thuisborg Finance BV<br />
+              2021 © Thuisborg<br />
+              Mr. G. Groen van Prinstererlaan 88 A<br />
+              1181 TR Amstelveen<br />
+              <a href="call:0854015737">085 401 57 37</a>
+            </p>
+          </div>
+          <div class="col menu-cont">
+            <ul>
+              <li><a href="investeren">Investeren</a></li>
+              <li><a href="verzilveren">Verzilveren</a></li>
+              <li><a href="zorgwoning">Zorgwoning</a></li>
+              <li><a href="contact">Contact</a></li>
+              <li><a href="https://thuisborg.nl/nieuws/">Nieuws</a></li>
+              <li>
+                <a href="/docs/COOKIEVERKLARING-1.pdf">Cookie verklaring</a>
+              </li>
+              <li><a href="privacy-verklaring">Privacy verklaring</a></li>
+              <li>
+                <a target="_blank" href="/docs/2.-AV-Thuisborg-2021-v3-NL.pdf">Algemene Voorwaarden</a>
+              </li>
+            </ul>
+            <!--						<a class="btn">call to action</a>-->
+          </div>
+          <div class="col contact-us">
+            <div class="contact-form">
+              <p>Schrijf u in voor onze nieuwsbrief en blijf op de hoogte van de laatste ontwikkelingen</p>
+              <form
+                action="https://forms.zohotemplate.eu/soliditry/form/TBwebsitenewsletterform/formperma/0ZQEmPwLYan6m776lzxdVRvzICaFWRig7HSWrbwgtyE/htmlRecords/submit"
+                name="form"
+                method="POST"
+                onSubmit='javascript:document.charset="UTF-8"; return zf_ValidateAndSubmit();'
+                accept-charset="UTF-8"
+                enctype="multipart/form-data"
+                id="form"
+              >
+                <input type="hidden" name="zf_referrer_name" value="" />
+                <div class="form_hiddens">
+                  <input type="hidden" name="zf_redirect_url" value="" />
+                  <!-- To redirect to a specific page after record submission , place the respective url within the " " in the above hidden input field -->
+                  <input type="hidden" name="zc_gad" value="" />
+                  <!-- If GCLID is enabled in Zoho CRM Integration, click details of AdWords Ads will be pushed to Zoho CRM -->
+                  <input type="hidden" name="utm_source" value="" />
+                  <input type="hidden" name="utm_medium" value="" />
+                  <input type="hidden" name="utm_campaign" value="" />
+                  <input type="hidden" name="utm_term" value="" />
+                  <input type="hidden" name="utm_content" value="" />
+                </div>
+                <input fieldType="9" type="text" maxlength="255" name="Email" checktype="c5" value="" placeholder="Email" />
+                <button class="btn">Schrijf je in!</button>
+              </form>
             </div>
-            <div class="col menu-cont">
-              <ul>
-                <li><a href="investeren">Investeren</a></li>
-                <li><a href="verzilveren">Verzilveren</a></li>
-                <li><a href="zorgwoning">Zorgwoning</a></li>
-                <li><a href="contact">Contact</a></li>
-                <li><a href="https://thuisborg.nl/nieuws/">Nieuws</a></li>
-                <li>
-                  <a href="/docs/COOKIEVERKLARING-1.pdf">Cookie verklaring</a>
-                </li>
-                <li><a href="privacy-verklaring">Privacy verklaring</a></li>
-                <li>
-                  <a target="_blank" href="/docs/2.-AV-Thuisborg-2021-v3-NL.pdf">Algemene Voorwaarden</a>
-                </li>
-              </ul>
-              <!--						<a class="btn">call to action</a>-->
-            </div>
-            <div class="col contact-us">
-              <div class="contact-form">
-                <p>Schrijf u in voor onze nieuwsbrief en blijf op de hoogte van de laatste ontwikkelingen</p>
-                <form
-                  action="https://forms.zohotemplate.eu/soliditry/form/TBwebsitenewsletterform/formperma/0ZQEmPwLYan6m776lzxdVRvzICaFWRig7HSWrbwgtyE/htmlRecords/submit"
-                  name="form"
-                  method="POST"
-                  onSubmit='javascript:document.charset="UTF-8"; return zf_ValidateAndSubmit();'
-                  accept-charset="UTF-8"
-                  enctype="multipart/form-data"
-                  id="form"
-                >
-                  <input type="hidden" name="zf_referrer_name" value="" />
-                  <div class="form_hiddens">
-                    <input type="hidden" name="zf_redirect_url" value="" />
-                    <!-- To redirect to a specific page after record submission , place the respective url within the " " in the above hidden input field -->
-                    <input type="hidden" name="zc_gad" value="" />
-                    <!-- If GCLID is enabled in Zoho CRM Integration, click details of AdWords Ads will be pushed to Zoho CRM -->
-                    <input type="hidden" name="utm_source" value="" />
-                    <input type="hidden" name="utm_medium" value="" />
-                    <input type="hidden" name="utm_campaign" value="" />
-                    <input type="hidden" name="utm_term" value="" />
-                    <input type="hidden" name="utm_content" value="" />
-                  </div>
-                  <input fieldType="9" type="text" maxlength="255" name="Email" checktype="c5" value="" placeholder="Email" />
-                  <button class="btn">Schrijf je in!</button>
-                </form>
-              </div>
-              <div class="sponsors">
-                <a href="">
-                  <img src="/template/images/sponsor-1.png" />
-                </a>
-                <a>
-                  <img src="/template/images/sponsor-2.png" />
-                </a>
-              </div>
+            <div class="sponsors">
+              <a href="">
+                <img src="/template/images/sponsor-1.png" />
+              </a>
+              <a>
+                <img src="/template/images/sponsor-2.png" />
+              </a>
             </div>
           </div>
+        </div>
         <div class="copyright">
           <div class="copy__cont middle standard">
             <div class="copy">
