--- a/bedankt.html
+++ b/bedankt.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="nl">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Overwaarde verzilveren | Thuisborg</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Thuisborg" />
+    <meta property="og:url" content="Thuisborg" />
+    <meta property="og:title" content="Thuisborg" />
+    <meta property="og:description" content="Thuisborg" />
+    <meta property="og:image" content="Thuisborg" />
+    <meta name="apple-mobile-web-app-title" content="Thuisborg" />
+    <meta name="application-name" content="Thuisborg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/template/fav/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/template/fav/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/template/fav/favicon-16x16.png" />
+    <link rel="manifest" href="/template/fav/site.webmanifest" />
+    <link rel="mask-icon" href="/template/fav/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body class="register-page">
     <div id="app">
