--- a/nieuws.html
+++ b/nieuws.html
@@ -246,7 +246,7 @@
                     Uw huis verkopen, er blijven <br />
                     <span class="green-text">wonen én financieel genieten</span>
                   </h4>
-                  <a v-scroll-to="{ el: '#invest-form', offset: 0 }" @click="navClick($event)" class="btn">Download brochure</a>
+                  <a href="#invest-form" class="btn">Download brochure</a>
                 </div>
               </div>
             </div>
