--- a/zorgwoning-45.html
+++ b/zorgwoning-45.html
@@ -198,7 +198,7 @@
                   <li><img src="/template/images/affection.png" alt="" /><span>Zorg & comfort</span></li>
                 </ul>
                 <div>
-                  <a href="" href="#verzil-form" @click="navClick($event)" class="btn">Adviesgesprek aanvragen</a>
+                  <a href="#verzil-form" @click="navClick($event)" class="btn">Adviesgesprek aanvragen</a>
                 </div>
               </div>
               <div class="breadcrumb">
