--- a/investeren.html
+++ b/investeren.html
@@ -615,7 +615,7 @@
                   </p>
                 </div>
                 <div class="property-slider">
-                  <agile>
+                  <div>
                     <div class="slide">
                       <img src="/template/images/investeren-nederlandse-woningen.png" />
                     </div>
@@ -625,7 +625,7 @@
                     <div class="slide">
                       <img src="/template/images/investeren-nederlandse-woningen.png" />
                     </div>
-                  </agile>
+                  </div>
                 </div>
               </div>
               <div class="data-cont">
@@ -842,7 +842,6 @@
                 <img src="/template/images/star.png" />
                 <img src="/template/images/star.png" />
               </div>
-              <span>110 reviews</span>
             </div>
           </div>
         </div>
