--- a/over-ons.html
+++ b/over-ons.html
@@ -271,7 +271,7 @@
                 <!--								</li>-->
                 <!--							</ul>-->
                 <div>
-                  <span @click="$store.commit('setLightbox', {list: ['/template/images/thuisborg-organogram.jpg'], index: 0})" class="btn">Open overzicht</span>
+                  <a target="_blank" href="/template/images/thuisborg-organogram.jpg" class="btn">Open overzicht</a>
                 </div>
               </div>
               <div class="img__cont">
@@ -558,7 +558,6 @@
                 <img src="/template/images/star.png" />
                 <img src="/template/images/star.png" />
               </div>
-              <span>110 reviews</span>
             </div>
           </div>
         </div>
