--- a/pages/obligaties-serie-tb21.html
+++ b/pages/obligaties-serie-tb21.html
@@ -46,12 +46,53 @@
 </head>
 <body>
 	<div id="app">
-		<main class="mx-auto">
-			<section id="hero">
-				<article>
-					<h1>about</h1>
-					<p>text</p>
-				</article>
+		<main class="main">
+			<div class="hero-system">
+				<div class="hero-wrapper">
+					<div class="hero-image">
+						<img src="/template/images/five-steps.png" class="crop-radius bl"/>
+					</div>
+					<div class="hero-inner middle standard">
+						<div class="hero-container">
+							<h1 id="iyr3">Inschrijving Thuisborg Woningwaarde Vastgoed
+								<span class="green-text">Obligaties Serie TB19</span>
+							</h1>
+							<p>Transparant en controleerbaar.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="hero-breadcrumb">
+					<div class="standard middle">
+						<div class="breadcrumb">
+							<div class="breadcrumb__cont">
+								<ul class="breadcrumb__cont__items">
+									<li>
+										<a href="">Home</a>
+									</li>
+									<li>
+										<span>Inschrijving Thuisborg Woningwaarde Vastgoed Obligaties Serie TB19</span>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<section class="mottos">
+				<div class="standard middle">
+					<ul>
+						<li class="checkmarked">Sociaal verantwoord investeren
+						</li>
+						<li class="checkmarked">Geheel gratis en vrijblijvende informatievoorziening
+						</li>
+						<li class="checkmarked">Transparant en controleerbaar
+						</li>
+					</ul>
+				</div>
+			</section>
+			<section>
+				<iframe frameborder="0" width="100%" height="1400px" aria-label="Inschrijving Thuisborg Woningwaarde Vastgoed Obligaties Serie TB21" src="https://forms.zohopublic.eu/soliditry/form/InschrijvingThuisborgWoningwaardeVastgoedObligatie5/formperma/ga43ddDn5Jh7YU_Z2PwMOiHvXhLdUr077Rm38MDFwmA" id="i4dyw"></iframe>
 			</section>
 		</main>
 	</div>
