--- a/pages/bekijk-uw-mogelijkheden.html
+++ b/pages/bekijk-uw-mogelijkheden.html
@@ -1,12 +1,3 @@
-<!--
-
-
-
-IMPORTANT: All comments should be removed And all fields with --- should be replaced
-
-
-
- -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -55,21 +46,16 @@ IMPORTANT: All comments should be removed And all fields with --- should be repl
 </head>
 <body>
 	<div id="app">
-		<header aria-label="Navigation">
-
-		</header>
-		<main class="mx-auto">
-			<section id="hero">
-				<article>
-					<h1>model 1</h1>
-					<p>text</p>
-				</article>
-			</section>
+		<main>
+			<div class="register">
+				<div class="register-form-cont">
+					<registration>
+					</registration>
+				</div>
+			</div>
+			<div class="test">
+			</div>
 		</main>
-
-		<footer>
-
-		</footer>
 	</div>
 	<!--	JS Start    -->
 	<script type="module" src="/src/js/main.js"></script>
