--- a/pages/5-stappenplan.html
+++ b/pages/5-stappenplan.html
@@ -61,7 +61,7 @@
 							   vragen, neemt u dan contact met ons op. Wij helpen u graag verder.
 							</p>
 							<div>
-								<a v-scroll-to="{ el: '#verzil-form', offset: 0 }" @click="navClick($event)" class="btn">Oriëntatiegesprek aanvragen</a>
+								<a href="#verzil-form" v-smooth-scroll="{ container: '#verzil-form', offset: 0 }"  class="btn">Oriëntatiegesprek aanvragen</a>
 							</div>
 						</div>
 					</div>
