--- a/pages/contact.html
+++ b/pages/contact.html
@@ -78,31 +78,31 @@
 										<br/>
 									</p>
 									<p id="ip9iz">
-										<font id="i0t90p">
-											<font id="ijtgtp">Commercieel:
-											</font>
-										</font>
+										<span id="i0t90p">
+											<span id="ijtgtp">Commercieel:
+											</span>
+										</span>
 										<br/>
-										<font id="i9rodl">
-											<font id="i071aa">020-532 18 80
-											</font>
-										</font>
+										<span id="i9rodl">
+											<span id="i071aa">020-532 18 80
+											</span>
+										</span>
 										<br/>
-										<font id="iizkd3">
-											<font id="ivqbbl">020-532 18 46
-											</font>
-										</font>
+										<span id="iizkd3">
+											<span id="ivqbbl">020-532 18 46
+											</span>
+										</span>
 										<br/>
 										<br/>
-										<font id="ihoyml">
-											<font id="ixyky7">Verzilveren:
-											</font>
-										</font>
+										<span id="ihoyml">
+											<span id="ixyky7">Verzilveren:
+											</span>
+										</span>
 										<br/>
-										<font id="io5mo3">
-											<font id="imjrz7">020-808 21 40
-											</font>
-										</font>
+										<span id="io5mo3">
+											<span id="imjrz7">020-808 21 40
+											</span>
+										</span>
 									</p>
 								</li>
 								<li>
