--- a/pages/faq.html
+++ b/pages/faq.html
@@ -78,44 +78,7 @@
 				</div>
 			</section>
 			<section class="faq-cont">
-				<div class="standard middle">
-					<div v-for="faqSet in faqList" class="faq-set">
-						<div v-if="!!faqSet.sectionTitle" class="faqsect">
-							<h2 class="faq-set__title">{{faqSet.sectionTitle}}
-							</h2>
-							<div v-for="fq in faqSet.items" class="faq-rest">
-								<h2 class="faq-set__title sub">{{fq.title}}
-								</h2>
-								<ul>
-									<li v-for="fqi in fq.items" class="faq-set__item">
-										<div @click="toggleFaq($event)" class="faq-set__item__header">
-											<h4>{{fqi.question}}
-											</h4>
-											<span class="toggler"></span>
-										</div>
-										<div v-html="fqi.answer" class="faq-set__item__desc">
-										</div>
-									</li>
-								</ul>
-							</div>
-						</div>
-						<div v-else="" class="faq-rest">
-							<h2 class="faq-set__title">{{faqSet.title}}
-							</h2>
-							<ul>
-								<li v-for="faqItem in faqSet.items" class="faq-set__item">
-									<div @click="toggleFaq($event)" class="faq-set__item__header">
-										<h4>{{faqItem.question}}
-										</h4>
-										<span class="toggler"></span>
-									</div>
-									<div v-html="faqItem.answer" class="faq-set__item__desc">
-									</div>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
+				<faq></faq>
 			</section>
 			<section class="invest asym-image-text">
 				<div class="asym__image">
@@ -151,6 +114,23 @@
 			</section>
 		</main>
 	</div>
+	<script>
+		if (window.location.hostname === 'localhost') {
+			fetch('/partials.html')
+					.then(response => response.text())
+					.then(html => {
+						const template = document.createElement('template');
+						template.innerHTML = html.trim();
+						const header = template.content.querySelector('header');
+						const footer = template.content.querySelector('footer');
+
+						// Insert the header and footer around the main content
+						const app = document.getElementById('app');
+						app.insertAdjacentElement('afterbegin', header);
+						app.appendChild(footer);
+					});
+		}
+	</script>
 	<!--	JS Start    -->
 	<script type="module" src="/src/js/main.js"></script>
 	<!--	CSS End    -->
