--- a/pages/investeren.html
+++ b/pages/investeren.html
@@ -125,8 +125,8 @@
 							   informatievoorziening aan woningeigenaren.
 							</p>
 							<!--							<div>-->
-							<!--								<a v-scroll-to="{ el: '#invest-form', offset: 0 }"-->
-							<!--								   @click="navClick($event)" class="btn">-->
+							<!--								<a href="#invest-form" v-smooth-scroll="{ container: '#invest-form', offset: 0 }"-->
+							<!--								    class="btn">-->
 							<!--									<span>Download brochure</span>-->
 							<!--								</a>-->
 							<!--							</div>-->
