--- a/pages/verzilveren.html
+++ b/pages/verzilveren.html
@@ -65,7 +65,7 @@
 						                uw woning vastzit beschikbaar te maken voor uw eigen doeleinden.
 						</p>
 						<div>
-							<a v-scroll-to="{ el: '#verzil-form', offset: 0 }" @click="navClick($event)" class="btn">Oriëntatiegesprek aanvragen</a>
+							<a href="#verzil-form" v-smooth-scroll="{ container: '#verzil-form', offset: 0 }"  class="btn">Oriëntatiegesprek aanvragen</a>
 						</div>
 					</div>
 					<div class="hero-image">
