--- a/pages/woningwaarde-estate-plan.html
+++ b/pages/woningwaarde-estate-plan.html
@@ -61,7 +61,7 @@
 							   achterstanden van betalingen (nutsbedrijven, OZB, etc.) te zijn voldaan.
 							</p>
 							<div>
-								<a v-scroll-to="{ el: '#verzil-form', offset: 0 }" @click="navClick($event)"
+								<a href="#verzil-form" v-smooth-scroll="{ container: '#verzil-form', offset: 0 }"
 								   class="btn">Oriëntatiegesprek aanvragen</a>
 							</div>
 						</div>
