--- a/pages/woningwaarde-verzilverplan.html
+++ b/pages/woningwaarde-verzilverplan.html
@@ -62,7 +62,7 @@
 			rendement voor investeerders en huizenverkopers
 		  </p>
 		  <div>
-			<a v-scroll-to="{ el: '#verzil-form', offset: 0 }" @click="navClick($event)" class="btn">Oriëntatiegesprek aanvragen</a>
+			<a href="#verzil-form" v-smooth-scroll="{ container: '#verzil-form', offset: 0 }"  class="btn">Oriëntatiegesprek aanvragen</a>
 		  </div>
 		</div>
 	  </div>
