--- a/pages/zorgwoning.html
+++ b/pages/zorgwoning.html
@@ -79,7 +79,7 @@
 			</li>
 		  </ul>
 		  <div>
-			<a v-scroll-to="{ el: '#verzil-form', offset: 0 }" @click="navClick($event)" class="btn">Adviesgesprek aanvragen</a>
+			<a href="#verzil-form" v-smooth-scroll="{ container: '#verzil-form', offset: 0 }"  class="btn">Adviesgesprek aanvragen</a>
 		  </div>
 		</div>
 	  </div>
